--- a/index.html
+++ b/index.html
@@ -1,6 +1,47 @@
-<DOCTYPE html>
+<!doctype html>
+<html class="no-js" lang="en">
+
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Cuisine, fashion, seduction, design... Trust the Frenchies</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
+
 <body>
+  <section>
+	  <h1>Only the French can cook</h1>
+	  <h2>right?</h2>
+	  <p>Is that why <strong>Stéréosuper and its tight group of Frenchies</strong> are so good at whipping up awesome visual identities and designing kick-ass sites and apps? Lucky for you, Stéréosuper goes all American dream and opens an office in Brooklyn. <a href="#">Want to talk about it?</a></p>
+  </section>
+  <section>
+  	<p>#workwithfrenchies</p>
+  	<p>FR / US </p>
+  </section>
+  <section>
+  <p>All our dishes are homemade with the best locally grown organic products. No animal was ever harmed in our kitchen. We like gluten, though. Sorry. <a href="#"> Watch French TV legend Maïté cook frog legs</a></p>
+  </section>
+
+  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+
+  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 </html>
