--- a/index.html
+++ b/index.html
@@ -18,17 +18,57 @@
 </head>
 
 <body>
-  <section>
-	  <h1>Only the French can cook</h1>
-	  <h2>right?</h2>
-	  <p>Is that why <strong>Stéréosuper and its tight group of Frenchies</strong> are so good at whipping up awesome visual identities and designing kick-ass sites and apps? Lucky for you, Stéréosuper goes all American dream and opens an office in Brooklyn. <a href="#">Want to talk about it?</a></p>
+  <header class="page-header">
+  <a href="#">  
+  <img src="images/stereosuper-logo.png" alt="logo" class="logo">
+  <img src="images/frog.png" alt="frog" class="frog-icon">
+  </header>
+  <section class="page-intro">
+	  <h1 class="title">Only the<br> French can<br> cook</h1>
+	  <h2 class="title-remark">(right?)</h2>
+	  <div class="header-image">
+	  <img src="images/header.png" alt="frog-soup">
+	  </div>
+	  <p>Is that why <strong>Stéréosuper and its tight group of Frenchies</strong> are so good at whipping up awesome visual identities and designing kick-ass sites and apps? Lucky for you, Stéréosuper goes all American dream and opens an office in Brooklyn. <a href="#" class="about">Want to talk about it?</a></p>
   </section>
-  <section>
+  <section class="page-section">
+  	<article class="about">
+  	<img src="images/la-recipe.png" alt="recipe" class="recipe">
+    </article>
+    <article class="about">
+    <img src="images/ingredients.png" alt="ingredients" class="ingredients">
+    </article>
+    <article class="about">
+    <img src="images/la-way.png" alt="la-way" class="la-way">
+    </article>
+    <article class="about">
+    <p>All our dishes are homemade with the best locally grown organic products. No animal was ever harmed in our kitchen. We like gluten, though. Sorry. <a href="#">Watch French TV legend Maïté cook frog legs</a></p>
+    <img src="images/viola.png" alt="viola" class="viola">
+    </article>
+  <section class="page-section">
   	<p>#workwithfrenchies</p>
   	<p>FR / US </p>
   </section>
-  <section>
-  <p>All our dishes are homemade with the best locally grown organic products. No animal was ever harmed in our kitchen. We like gluten, though. Sorry. <a href="#"> Watch French TV legend Maïté cook frog legs</a></p>
+  <section class="reasons-why">
+  	<div class="cleafix">
+  	<article class="reason">
+  	<img src="images/reason-1.png" alt="reason1">
+    </article>
+    <article class="reason">
+    <img src="images/reason-2.png" alt="reason2">
+    </article>
+    <article class="reason">
+    <img src="images/reason-3.png" alt="reason3">
+    </article>
+    <article class="reason">
+    <img src="images/reason-4.png" alt="reason4">
+    </article>
+    </div>
+    </section>
+  <section class="page-section">
+  	  <h2 class="lets-talk">Let's talk</h2>
+  	  <p>All our dishes are homemade with the best locally grown organic products. No animal was ever harmed in our kitchen. We like gluten, though. Sorry. <a href="#"> Watch French TV legend Maïté cook frog legs</a></p>
+  <img src="images/chef.png" alt="chef" class="chef-image">
   </section>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
