--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
   <img src="images/frog.png" alt="frog" class="frog-icon">
   </header>
   <section class="page-intro">
-	  <h1 class="title">Only the<br> French can<br> cook</h1>
+	  <h1 class="title">Only the</h1>
+	  <h1 class="title-line2">French can</h1>
+	  <h1 class="title-line3">cook</h1>
 	  <h2 class="title-remark">(right?)</h2>
 	  <div class="header-image">
-	  <img src="images/header.png" alt="frog-soup">
+	  <img src="images/header.png" alt="frog-soup" class="frog-soup">
 	  </div>
-	  <p>Is that why <strong>Stéréosuper and its tight group of Frenchies</strong> are so good at whipping up awesome visual identities and designing kick-ass sites and apps? Lucky for you, Stéréosuper goes all American dream and opens an office in Brooklyn. <a href="#" class="about">Want to talk about it?</a></p>
+	  <p class="intro-paragraph">Is that why <strong>Stéréosuper and its tight group of Frenchies</strong> are so good at whipping up awesome visual identities and designing kick-ass sites and apps? Lucky for you, Stéréosuper goes all American dream and opens an office in Brooklyn. <a href="#" class="about">Want to talk about it?</a></p>
   </section>
   <section class="page-section">
   	<article class="about">
