--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
 </head>
 
 <body>
-  <header class="page-header">
-  <a href="#">  
+  <header>
+  <a href="#" class="logo">  
   <img src="images/stereosuper-logo.png" alt="logo" class="logo">
+  </a>
+  <a href="#">
   <img src="images/frog.png" alt="frog" class="frog-icon">
+  </a>
   </header>
   <section class="page-intro">
 	  <h1 class="title">Only the</h1>
@@ -33,44 +36,48 @@
 	  </div>
 	  <p class="intro-paragraph">Is that why <strong>Stéréosuper and its tight group of Frenchies</strong> are so good at whipping up awesome visual identities and designing kick-ass sites and apps? Lucky for you, Stéréosuper goes all American dream and opens an office in Brooklyn. <a href="#" class="about">Want to talk about it?</a></p>
   </section>
-  <section class="page-section">
+  <div class="container">
   	<article class="about">
   	<img src="images/la-recipe.png" alt="recipe" class="recipe">
-    </article>
-    <article class="about">
-    <img src="images/ingredients.png" alt="ingredients" class="ingredients">
     </article>
     <article class="about">
     <img src="images/la-way.png" alt="la-way" class="la-way">
     </article>
     <article class="about">
+    <img src="images/ingredients.png" alt="ingredients" class="ingredients">
+    </article>
+    <article class="about">
     <p>All our dishes are homemade with the best locally grown organic products. No animal was ever harmed in our kitchen. We like gluten, though. Sorry. <a href="#">Watch French TV legend Maïté cook frog legs</a></p>
     <img src="images/viola.png" alt="viola" class="viola">
     </article>
-  <section class="page-section">
+   </div>
+  <aside class="aside">
   	<p>#workwithfrenchies</p>
   	<p>FR / US </p>
-  </section>
+  </aside>
   <section class="reasons-why">
-  	<div class="cleafix">
+  	<div class="clearfix">
   	<article class="reason">
-  	<img src="images/reason-1.png" alt="reason1">
+  	<img src="images/reason-1.png" alt="reason1" class="reason1">
     </article>
     <article class="reason">
-    <img src="images/reason-2.png" alt="reason2">
+    <img src="images/reason-2.png" alt="reason2" class="reason2">
     </article>
     <article class="reason">
-    <img src="images/reason-3.png" alt="reason3">
+    <img src="images/reason-3.png" alt="reason3" class="reason3">
     </article>
     <article class="reason">
-    <img src="images/reason-4.png" alt="reason4">
+    <img src="images/reason-4.png" alt="reason4" class="reason4">
     </article>
     </div>
     </section>
   <section class="page-section">
-  	  <h2 class="lets-talk">Let's talk</h2>
-  	  <p>All our dishes are homemade with the best locally grown organic products. No animal was ever harmed in our kitchen. We like gluten, though. Sorry. <a href="#"> Watch French TV legend Maïté cook frog legs</a></p>
-  <img src="images/chef.png" alt="chef" class="chef-image">
+  	  <article class="lets-talk-statement">
+  	  <a href="#" class="lets-talk">Let's talk</a>
+  	  <p>We love to meet new people with fresh ideas who want to do business efficiently and differently. Because designing and building great sites and apps, helping brands express themselves and get noticed is why we love this job. So hit us up at <a>cuisine@stereosuper.fr</a> to tell us more.</p>
+  	  </article>
+      <img src="images/chef.png" alt="chef" class="chef-image">
+  </section>
   </section>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
