--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
     <img src="images/ingredients.png" alt="ingredients" class="ingredients">
     </article>
     <article class="about">
-    <p>All our dishes are homemade with the best locally grown organic products. No animal was ever harmed in our kitchen. We like gluten, though. Sorry. <a href="#">Watch French TV legend Maïté cook frog legs</a></p>
+    <p>All our dishes are homemade with the best locally grown organic products. No animal was ever harmed in our kitchen. We like gluten, though. Sorry. <a href="https://www.youtube.com/watch?v=thJxGSuPjNo">Watch French TV legend Maïté cook frog legs</a></p>
     <img src="images/viola.png" alt="viola" class="viola">
     </article>
    </div>
   <aside class="aside">
-  	<p>#workwithfrenchies</p>
-  	<p>FR / US </p>
+  	<a href="#" class="instagram">#workwithfrenchies</a>
+  	<a href="#" class="language">FR</a>/<a href="#" class="language">US</a>
   </aside>
   <section class="reasons-why">
   	<div class="clearfix">
@@ -73,11 +73,11 @@
     </article>
     </div>
     </section>
-  <section class="page-section">
-  	  <article class="lets-talk-statement">
+  <section class="contact">
+  	  <div class="lets-talk-statement">
   	  <a href="#" class="lets-talk">Let's talk</a>
   	  <p>We love to meet new people with fresh ideas who want to do business efficiently and differently. Because designing and building great sites and apps, helping brands express themselves and get noticed is why we love this job. So hit us up at <a>cuisine@stereosuper.fr</a> to tell us more.</p>
-  	  </article>
+  	  </div>
       <img src="images/chef.png" alt="chef" class="chef-image">
   </section>
   </section>
