--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
 
 <body>
   <header>
-  <a href="#" class="logo">  
-  <img src="images/stereosuper-logo.png" alt="logo" class="logo">
-  </a>
-  <a href="#">
-  <img src="images/frog.png" alt="frog" class="frog-icon">
-  </a>
+  <nav class="main-nav">
+	  <a href="#" class="logo">  
+	  <img src="images/stereosuper-logo.png" alt="logo" class="logo">
+	  </a>
+	  <a href="#">
+	  <img src="images/frog.png" alt="frog" class="frog-icon">
+	  </a>
+  </nav>
   </header>
-  <section class="page-intro">
+  	<section class="page-intro">
+  	  <div class="title-container">
 	  <h1 class="title">Only the</h1>
 	  <h1 class="title-line2">French can</h1>
 	  <h1 class="title-line3">cook</h1>
@@ -37,21 +40,21 @@
 	  <img src="images/header.png" alt="frog-soup" class="frog-soup">
 	  </div>
 	  <p class="intro-paragraph">Is that why <strong>Stéréosuper and its tight group of Frenchies</strong> are so good at whipping up awesome visual identities and designing kick-ass sites and apps? Lucky for you, Stéréosuper goes all American dream and opens an office in Brooklyn. <a href="#" class="about">Want to talk about it?</a></p>
-  </section>
+    </section>
   <div class="container">
   	<article class="about">
-  	<img src="images/la-recipe.png" alt="recipe" class="recipe">
+  		<img src="images/la-recipe.png" alt="recipe" class="recipe">
     </article>
     <article class="about">
-    <img src="images/la-way.png" alt="la-way" class="la-way">
+    	<img src="images/la-way.png" alt="la-way" class="la-way">
     </article>
     <article class="about">
-    <img src="images/ingredients.png" alt="ingredients" class="ingredients">
+    	<img src="images/ingredients.png" alt="ingredients" class="ingredients">
     </article>
-    <article class="about">
-    <p>All our dishes are homemade with the best locally grown organic products. No animal was ever harmed in our kitchen. We like gluten, though. Sorry. <a href="https://www.youtube.com/watch?v=thJxGSuPjNo">Watch French TV legend Maïté cook frog legs</a></p>
-    <img src="images/viola.png" alt="viola" class="viola">
-    </article>
+    <div class="about-container">
+	    <img src="images/viola.png" alt="viola" class="viola">
+	    <div class="disclaimer">All our dishes are homemade with the best locally grown organic products. No animal was ever harmed in our kitchen. We like gluten, though. Sorry. <a href="https://www.youtube.com/watch?v=thJxGSuPjNo">Watch French TV legend Maïté cook frog legs</a></div>
+    </div>
    </div>
   <aside class="aside">
   	<a href="#" class="instagram">#workwithfrenchies</a>
@@ -59,24 +62,24 @@
   </aside>
   <section class="reasons-why">
   	<div class="clearfix">
-  	<article class="reason">
-  	<img src="images/reason-1.png" alt="reason1" class="reason1">
-    </article>
-    <article class="reason">
-    <img src="images/reason-2.png" alt="reason2" class="reason2">
-    </article>
-    <article class="reason">
-    <img src="images/reason-3.png" alt="reason3" class="reason3">
-    </article>
-    <article class="reason">
-    <img src="images/reason-4.png" alt="reason4" class="reason4">
-    </article>
-    </div>
+	  	<article class="reason">
+	  	<img src="images/reason-1.png" alt="reason1" class="reason1">
+	    </article>
+	    <article class="reason">
+	    <img src="images/reason-2.png" alt="reason2" class="reason2">
+	    </article>
+	    <article class="reason">
+	    <img src="images/reason-3.png" alt="reason3" class="reason3">
+	    </article>
+	    <article class="reason">
+	    <img src="images/reason-4.png" alt="reason4" class="reason4">
+	    </article>
+      </div>
     </section>
   <section class="contact">
-  	  <div class="lets-talk-statement">
-  	  <a href="#" class="lets-talk">Let's talk</a>
-  	  <p>We love to meet new people with fresh ideas who want to do business efficiently and differently. Because designing and building great sites and apps, helping brands express themselves and get noticed is why we love this job. So hit us up at <a>cuisine@stereosuper.fr</a> to tell us more.</p>
+  	  <div class="lets-talk-section">
+	  	  <a href="#" class="lets-talk">Let's talk</a>
+	  	  <p class="lets-talk-statement">We love to meet new people with fresh ideas who want to do business efficiently and differently. Because designing and building great sites and apps, helping brands express themselves and get noticed is why we love this job. So hit us up at <a>cuisine@stereosuper.fr</a> to tell us more.</p>
   	  </div>
       <img src="images/chef.png" alt="chef" class="chef-image">
   </section>
