--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <header>
   <nav class="main-nav">
-	  <a href="#" class="logo">  
+	  <a href="#intro" class="logo">  
 	  <img src="images/stereosuper-logo.png" alt="logo" class="logo">
 	  </a>
 	  <a href="#">
@@ -31,6 +31,8 @@
   </nav>
   </header>
   	<section class="page-intro">
+    <a name="intro">
+    <a name="social-media">
   	  <div class="title-container">
 	  <h1 class="title">Only the</h1>
 	  <h1 class="title-line2">French can</h1>
@@ -39,7 +41,7 @@
 	  <div class="header-image">
 	  <img src="images/header.png" alt="frog-soup" class="frog-soup">
 	  </div>
-	  <p class="intro-paragraph">Is that why <strong>Stéréosuper and its tight group of Frenchies</strong> are so good at whipping up awesome visual identities and designing kick-ass sites and apps? Lucky for you, Stéréosuper goes all American dream and opens an office in Brooklyn. <a href="#" class="about">Want to talk about it?</a></p>
+	  <p class="intro-paragraph">Is that why <strong>Stéréosuper and its tight group of Frenchies</strong> are so good at whipping up awesome visual identities and designing kick-ass sites and apps? Lucky for you, Stéréosuper goes all American dream and opens an office in Brooklyn. <a href="#letstalk" class="about">Want to talk about it?</a></p>
     </section>
   <div class="container">
   	<article class="about">
@@ -57,7 +59,7 @@
     </div>
    </div>
   <aside class="aside">
-  	<a href="#" class="instagram">#workwithfrenchies</a>
+  	<a href="#social-media" class="social-media">#workwithfrenchies</a>
   	<a href="#" class="language">FR</a>/<a href="#" class="language">US</a>
   </aside>
   <section class="reasons-why">
@@ -77,9 +79,10 @@
       </div>
     </section>
   <section class="contact">
+      <a name="letstalk">
   	  <div class="lets-talk-section">
-	  	  <a href="#" class="lets-talk">Let's talk</a>
-	  	  <p class="lets-talk-statement">We love to meet new people with fresh ideas who want to do business efficiently and differently. Because designing and building great sites and apps, helping brands express themselves and get noticed is why we love this job. So hit us up at <a>cuisine@stereosuper.fr</a> to tell us more.</p>
+	  	  <a href="https://www.gmail.com" class="lets-talk-email">Let's talk<img src="images/arrow.png" alt="email-link"></a>
+	  	  <p class="lets-talk-statement">We love to meet new people with fresh ideas who want to do business efficiently and differently. Because designing and building great sites and apps, helping brands express themselves and get noticed is why we love this job. So hit us up at <a href="https://www.gmail.com">cuisine@stereosuper.fr</a> to tell us more.</p>
   	  </div>
       <img src="images/chef.png" alt="chef" class="chef-image">
   </section>
