--- a/index.html
+++ b/index.html
@@ -30,33 +30,35 @@
 	  </a>
   </nav>
   </header>
-  	<section class="page-intro">
-    <a name="intro">
-    <a name="social-media">
-  	  <div class="title-container">
-	  <h1 class="title">Only the</h1>
-	  <h1 class="title-line2">French can</h1>
-	  <h1 class="title-line3">cook</h1>
-	  <h2 class="title-remark">(right?)</h2>
-	  <div class="header-image">
-	  <img src="images/header.png" alt="frog-soup" class="frog-soup">
+  <section class="page-intro">
+    <a name="intro"></a>
+    <a name="social-media"></a>
+  	<div class="title-container">
+  	  <h1 class="title-line1">Only the</h1>
+  	  <h1 class="title-line2">French can</h1>
+  	  <h1 class="title-line3">cook</h1>
+  	  <h2 class="title-line3-remark">(right?)</h2>
+  	  <div class="header-image">
+  	  <img src="images/header.png" alt="frog-soup" class="frog-soup">
 	  </div>
 	  <p class="intro-paragraph">Is that why <strong>Stéréosuper and its tight group of Frenchies</strong> are so good at whipping up awesome visual identities and designing kick-ass sites and apps? Lucky for you, Stéréosuper goes all American dream and opens an office in Brooklyn. <a href="#letstalk" class="about">Want to talk about it?</a></p>
     </section>
-  <div class="container">
-  	<article class="about">
-  		<img src="images/la-recipe.png" alt="recipe" class="recipe">
-    </article>
-    <article class="about">
-    	<img src="images/la-way.png" alt="la-way" class="la-way">
-    </article>
-    <article class="about">
-    	<img src="images/ingredients.png" alt="ingredients" class="ingredients">
-    </article>
-    <div class="about-container">
+  </div>
+    <section class="container">
+    <div class="container">
 	    <img src="images/viola.png" alt="viola" class="viola">
 	    <div class="disclaimer">All our dishes are homemade with the best locally grown organic products. No animal was ever harmed in our kitchen. We like gluten, though. Sorry. <a href="https://www.youtube.com/watch?v=thJxGSuPjNo">Watch French TV legend Maïté cook frog legs</a></div>
     </div>
+    <article class="about">
+      <img src="images/la-way.png" alt="la-way" class="la-way">
+    </article>
+     <article class="about">
+      <img src="images/ingredients.png" alt="ingredients" class="ingredients">
+    </article>
+    <article class="about">
+      <img src="images/la-recipe.png" alt="recipe" class="recipe">
+    </article>
+    </section>
    </div>
   <aside class="aside">
   	<a href="#social-media" class="social-media">#workwithfrenchies</a>
