--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 	    <img src="images/viola.png" alt="viola" class="viola">
 	    <div class="disclaimer">All our dishes are homemade with the best locally grown organic products. No animal was ever harmed in our kitchen. We like gluten, though. Sorry. <a href="https://www.youtube.com/watch?v=thJxGSuPjNo">Watch French TV legend Maïté cook frog legs</a>
       </div>
+    </div>
+    <div class="container">
     <span class="about">
       <img src="images/la-way.png" alt="la-way" class="la-way">
     </span>
@@ -66,27 +68,27 @@
   	<a href="#" class="language">FR</a>/<a href="#" class="language">US</a>
   </aside>
 
-  <section class="reasons-why">
+  <div class="reasons-why">
   	<div class="clearfix">
-	  	<article class="reason">
+	  	<span class="reason">
 	  	 <img src="images/reason-1.png" alt="reason1" class="reason1">
-	    </article>
-	    <article class="reason">
+	    </span>
+	    <span class="reason">
 	     <img src="images/reason-2.png" alt="reason2" class="reason2">
-	    </article>
-	    <article class="reason">
+	    </span>
+	    <span class="reason">
 	     <img src="images/reason-3.png" alt="reason3" class="reason3">
-	    </article>
-	    <article class="reason">
+	    </span>
+	    <span class="reason">
 	     <img src="images/reason-4.png" alt="reason4" class="reason4">
-	    </article>
+	    </span>
       </div>
-    </section>
+    </div>
 
   <section class="contact">
       <a id="letstalk"></a>
   	  <div class="lets-talk-section">
-	  	  <a href="https://www.gmail.com" class="lets-talk-email">Let's talk<img src="images/arrow.png" alt="email-link"></a>
+	  	<h1><a href="https://www.gmail.com" class="lets-talk-email">Let's talk<img src="images/arrow.png" alt="email-link"></a></h1>
 	  	  <p class="lets-talk-statement">We love to meet new people with fresh ideas who want to do business efficiently and differently. Because designing and building great sites and apps, helping brands express themselves and get noticed is why we love this job. So hit us up at <a href="https://www.gmail.com">cuisine@stereosuper.fr</a> to tell us more.</p>
   	  </div>
       <img src="images/chef.png" alt="chef" class="chef-image">
