--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 	    <div class="disclaimer">All our dishes are homemade with the best locally grown organic products. No animal was ever harmed in our kitchen. We like gluten, though. Sorry. <a href="https://www.youtube.com/watch?v=thJxGSuPjNo">Watch French TV legend Maïté cook frog legs</a>
       </div>
     </div>
-    <div class="container">
-    <span class="about">
+    <div class="container2">
+    <span class="card">
       <img src="images/la-way.png" alt="la-way" class="la-way">
     </span>
-    <span class="about">
+    <span class="card">
       <img src="images/ingredients.png" alt="ingredients" class="ingredients">
     </span>
-    <span class="about">
+    <span class="card">
       <img src="images/la-recipe.png" alt="recipe" class="recipe">
     </span>
     </div>
