--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	  <img src="images/stereosuper-logo.png" alt="logo" class="logo">
 	  </a>
 	  <a href="#intro">
-	  <img src="images/frog.png" alt="frog" class="frog-icon">
+	  <img src="images/frog-2.png" alt="frog" class="frog-icon">
 	  </a>
   </nav>
   </header>
