--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <div>
 	  <p class="intro-paragraph">Is that why <strong>Stéréosuper and its tight group of Frenchies</strong> are so good at whipping up awesome visual identities and designing kick-ass sites and apps? Lucky for you, Stéréosuper goes all American dream and opens an office in Brooklyn. <a href="#letstalk" class="about">Want to talk about it?</a></p>
     </div>
+  </div>
   </section>
 
   <section class="recipe-details">
