--- a/french/french.html
+++ b/french/french.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html class="no-js" lang="en">
+<!doctype html>
+<html class="no-js" lang="fr">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Cuisine, fashion, seduction, design... Trust the Frenchies</title>
+  <title>Cuisine, mode, drague, design... Faites confiance aux frenchies!</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -35,15 +35,15 @@
     <a id="intro"></a>
     <a id="social-media"></a>
   	<div class="title-container">
-  	  <h1 class="title-line1">Only the</h1>
-  	  <h1 class="title-line2">French can</h1>
-  	  <h1 class="title-line3">cook</h1>
-  	  <h2 class="title-line3-remark">(right?)</h2>
+  	  <h1 class="title-line1">Seuls les</h1>
+  	  <h1 class="title-line2">frenchies</h1>
+  	  <h1 class="title-line3">cuisiner</h1>
+  	  <h2 class="title-line3-remark">(non?)</h2>
   	  <div class="header-image">
   	  <img src="images/header.png" alt="frog-soup" class="frog-soup">
 	  </div>
     <div>
-	  <p class="intro-paragraph">Is that why <strong>Stéréosuper and its tight group of Frenchies</strong> are so good at whipping up awesome visual identities and designing kick-ass sites and apps? Lucky for you, Stéréosuper goes all American dream and opens an office in Brooklyn. <a href="#letstalk" class="about">Want to talk about it?</a></p>
+	  <p class="intro-paragraph">Autant dire que <strong>seuls les frenchies de Stéréosupers</strong> sauront transmettre votre image, travailler votre identité visuelle, designer votre site ou votre app aux USA. Ça tombe bien, nous travaillons à l’ouverture de nouveaux bureaux à New York! <a href="#letstalk" class="about"> Parlons-en!</a></p>
     </div>
   </div>
   </section>
@@ -51,20 +51,20 @@
   <section class="recipe-details">
     <div class="container2">
     <span class="card">
-      <img src="images/ingredients.png" alt="ingredients" class="ingredients">
+      <img src="images/ingredients-french.png" alt="ingredients" class="ingredients">
     </span>
     <span class="card">
-      <img src="images/la-recipe.png" alt="recipe" class="recipe">
+      <img src="images/la-recipe-french.png" alt="recipe" class="recipe">
     </span>
     </div>
     <div class="containter3">
      <span class="card">
-      <img src="images/la-way.png" alt="la-way" class="la-way">
+      <img src="images/la-way-french.png" alt="la-way" class="la-way">
     </span>
     </div>
     <div class="container">
-      <img src="images/viola.png" alt="viola" class="viola">
-      <div class="disclaimer">All our recipes are homemade with the best locally grown organic products. No animal was ever harmed in our kitchen. We like gluten, though. Sorry. <a href="https://www.youtube.com/watch?v=thJxGSuPjNo">Watch French TV legend Maïté cook frog legs</a>
+      <img src="images/viola-french.png" alt="viola" class="viola">
+      <div class="disclaimer">Toutes nos recettes sont faites maison avec des produits organics et en circuits courts. Aucun animal n’a souffert. On mange du Gluten, par contre. <a href="https://www.youtube.com/watch?v=thJxGSuPjNo"> Découvrir la recette des cuisses de grenouilles en persillade de Maïté</a>
       </div>
     </div>
   </section>
@@ -77,16 +77,16 @@
   <div class="reasons-why">
   	<div class="clearfix">
 	  	<span class="reason">
-	  	 <img src="images/reason-1.png" alt="reason1" class="reason1">
+	  	 <img src="images/reason-1-french.png" alt="reason1" class="reason1">
 	    </span>
 	    <span class="reason">
-	     <img src="images/reason-2.png" alt="reason2" class="reason2">
+	     <img src="images/reason-2-french.png" alt="reason2" class="reason2">
 	    </span>
 	    <span class="reason">
-	     <img src="images/reason-3.png" alt="reason3" class="reason3">
+	     <img src="images/reason-3-french.png" alt="reason3" class="reason3">
 	    </span>
 	    <span class="reason">
-	     <img src="images/reason-4.png" alt="reason4" class="reason4">
+	     <img src="images/reason-4-french.png" alt="reason4" class="reason4">
 	    </span>
       </div>
     </div>
@@ -94,11 +94,8 @@
   <section class="contact">
       <a id="letstalk"></a>
   	  <div class="lets-talk-section">
-	  	<h1><a href="https://kstrange.studio.mcad.edu/frenchies_webdev_final/email/index.html" class="lets-talk-email"><img src="images/arrow.png" alt="email-link" class="arrow">Let's talk<img src="images/arrow.png" alt="email-link" class="arrow"></a></h1>
-	  	  <p class="lets-talk-statement">We love to meet new people with fresh ideas who want to do business efficiently and differently. Because designing and building great sites and apps, helping brands express themselves and get noticed is why we love this job. So hit us up at  <a id="email" title="Click to enter email" href="https://kstrange.studio.mcad.edu/frenchies_webdev_final/email/index.html" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=SomeSize,height=SomeSize'); return false;">cuisine@stereosuper.fr</a> to tell us more.</p>
-
-
-       
+	  	<h1><a href="https://kstrange.studio.mcad.edu/frenchies_webdev_final/french_email/index.html" class="lets-talk-email"><img src="images/arrow.png" alt="email-link" class="arrow">Let's talk<img src="images/arrow.png" alt="email-link" class="arrow"></a></h1>
+	  	  <p class="lets-talk-statement">Pour mener votre projet de design, image, site Internet, application, en France comme à l’international. <a href="https://kstrange.studio.mcad.edu/frenchies_webdev_final/french_email/index.html">cuisine@stereosuper.fr</a> 
   	  </div>
       <img src="images/chef.png" alt="chef" class="chef-image">
   </section>
