--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <a id="letstalk"></a>
   	  <div class="lets-talk-section">
 	  	<h1><a href="https://kstrange.studio.mcad.edu/frenchies_webdev_final/email/index.html" class="lets-talk-email"><img src="images/arrow.png" alt="email-link" class="arrow">Let's talk<img src="images/arrow.png" alt="email-link" class="arrow"></a></h1>
-	  	  <p class="lets-talk-statement">We love to meet new people with fresh ideas who want to do business efficiently and differently. Because designing and building great sites and apps, helping brands express themselves and get noticed is why we love this job. So hit us up at  <a id="email" title="Click to enter email" href="https://kstrange.studio.mcad.edu/frenchies_webdev_final/email/index.html" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=SomeSize,height=SomeSize'); return false;">cuisine@stereosuper.fr</a> to tell us more.</p>
+	  	  <p class="lets-talk-statement">We love to meet new people with fresh ideas who want to do business efficiently and differently. Because designing and building great sites and apps, helping brands express themselves and get noticed is why we love this job. So hit us up at  <a id="email" title="Click to enter email" href="https://kstrange.studio.mcad.edu/frenchies_webdev_final/email/index.html" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=SomeSize,height=SomeSize'); return false;">email</a> to tell us more.</p>
 
 
        
